--- a/plotlyjs/index.html
+++ b/plotlyjs/index.html
@@ -12,12 +12,13 @@
     <div id="yn_plot"></div>
     <div id="xy_plot"></div>
     <script src="script.js"></script>
-    <label>a <input type="range" id="a_slider" min="-0.5" max="2.5" step="0.001" 
-    oninput="myFunction2()">
+
+        <label>a <input type="range" id="a_slider" min="-0.5" max="2.5" step="0.001" oninput="myFunction2()">
     </label>
-    <label>b <input type="range" id="b_slider" min="-0.5" max="1.2" step="0.001" 
-    oninput="myFunction2()">
+
+    <label>b <input type="range" id="b_slider" min="-0.5" max="1.2" step="0.001" oninput="myFunction2()">
     </label>
+
     <div id="text" style="width:600px;height:250px;"></div>
   </body>
 </html>
