--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@ circle {
     <body>
     
     <div class='content'>
-        <label>a<input type="range" id="a_slider" min="-0.5" max="2.5" step="0.001" oninput="myFunction1()"></label>
+        <label>a<input type="range" id="a_slider" min="-0.5" max="2.5" step="0.001" oninput="redraw()"></label>
 
-        <label>b<input type="range" id="b_slider" min="-0.5" max="1.2" step="0.001" oninput="myFunction2()"></label>
+        <label>b<input type="range" id="b_slider" min="-0.5" max="1.2" step="0.001" oninput="redraw()"></label>
     </div>
         <script src="script.js"></script>
 
