--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <script src="d3/d3.js"></script>
         <style>
 .chart {
-
+    background-color: #edf3ff;
 }
 
 .main text {
@@ -26,20 +26,11 @@ circle {
 </style>
     </head>
     <body>
-    
     <div class='content'>
-        <label>a<input type="range" id="a_slider" min="-0.5" max="2.5" step="0.001" oninput="redraw()"></label>
+        <label>a<input type="range" id="a_slider" min="-0.5" max="2.5" step="0.0001" value="-0.1" oninput="redraw()"></label>
 
-        <label>b<input type="range" id="b_slider" min="-0.5" max="1.2" step="0.001" oninput="redraw()"></label>
+        <label>b<input type="range" id="b_slider" min="-0.5" max="1.2" step="0.0001" value = "1.0" oninput="redraw()"></label>
     </div>
         <script src="script.js"></script>
-
-
-
-<!--         <script>
-            d3.select("body")
-                .append("p")
-                .text("New paragraph!");
-        </script> -->
     </body>
 </html>
