add github link

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <title>D3 Test</title>
         <script src="d3/d3.js"></script>
         <link rel="stylesheet" type="text/css" href="main.css">
+        <script async defer src="https://buttons.github.io/buttons.js"></script>
 
     </head>
     <body>
@@ -13,6 +14,7 @@
 
         <label class="labels">b<input type="range" id="b_slider" min="-0.5" max="1.2" step="0.0001" value = "1.0" oninput="redraw()"></label>
     </div>
-        <script src="script.js"></script>
+    <script src="script.js"></script>
+    <a class="github-button" href="https://github.com/tandav" data-style="mega" aria-label="Follow @tandav on GitHub">Follow @tandav</a>
     </body>
 </html>
