--- a/index.html
+++ b/index.html
@@ -9,11 +9,28 @@
 
     </head>
     <body>
-    <div class='content'>
-        <label class="labels">a<input type="range" id="a_slider" min="-0.5" max="2.5" step="0.0001" value="-0.1" oninput="redraw()"></label>
 
-        <label class="labels">b<input type="range" id="b_slider" min="-0.5" max="1.2" step="0.0001" value = "1.0" oninput="redraw()"></label>
+    <div class='content'>
+        <label for="a_slider">a</label>
+        <input type="range" id="a_slider" oninput="redraw()">
+        <output for="a_slider" id="a_out"></output>
+
+        <label for="b_slider">b</label>
+        <input type="range" id="b_slider" oninput="redraw()">
+        <output for="b_slider" id="b_out"></output>
     </div>
+
+<!--     <div class='content'>
+        <label for="a_slider">a</label>
+        <input type="range" id="a_slider" min="-1.5" max="2.5" step="0.0001" value="-0.1" oninput="redraw()">
+        <output for="a_slider" id="a_out"></output>
+
+        <label for="b_slider">b</label>
+        <input type="range" id="b_slider" min="-0.5" max="1.2" step="0.0001" value="-0.1" oninput="redraw()">
+        <output for="b_slider" id="b_out"></output>
+    </div> -->
+
+
     <script src="script.js"></script>
     <a class="github-button" href="https://github.com/tandav" data-style="mega" aria-label="Follow @tandav on GitHub">Follow @tandav</a>
     </body>
