github button goes up

--- a/index.html
+++ b/index.html
@@ -9,7 +9,11 @@
 
     </head>
     <body>
-        <h1>Henon Map</h1>
+        <div class="header">
+            <h1>Henon Map</h1>
+            <a class="github-button" href="https://github.com/tandav/Henon-Map" data-style="mega" aria-label="Follow @tandav on GitHub">Github</a>
+        </div>
+
         <div class='controls'>
             <label class="labels">a<input type="range" id="a_slider" min="-0.5" max="2.5" step="0.0001" value="-0.1" oninput="redraw()"></label>
 
@@ -17,8 +21,5 @@
         </div>
         <div class="charts"></div>
         <script src="script.js"></script>
-        <div class="links">
-            <a class="github-button" href="https://github.com/tandav/Henon-Map" data-style="mega" aria-label="Follow @tandav on GitHub">Github</a>
-        </div>
     </body>
 </html>
