add html div structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     </head>
 
     <body>
+    <div class="charts">
+        <div class="n_plots"></div>
+        <
+    </div>
         <div id='xn-plot'></div>
         <div id='yn-plot'></div>
         <div class='xy-plot'>
@@ -26,3 +30,5 @@
         <a class="github-button" href="https://github.com/tandav/Henon-Map" data-style="mega">Github Repo</a>
     </body>
 </html>
+
+<!-- хз мб svg тоже сдесь объявлять? -->
