change title and min-max values for sliders

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>D3 Test</title>
+        <title>Henon Map</title>
         <script src="d3/d3.js"></script>
         <link rel="stylesheet" type="text/css" href="main.css">
         <script async defer src="https://buttons.github.io/buttons.js"></script>
@@ -14,9 +14,9 @@
         </div>
 
         <div class='controls'>
-            <label class="labels">a<input type="range" id="a_slider" min="-0.5" max="2.5" step="0.0001" value="-0.1" oninput="redraw()"></label>
+            <label class="labels">a<input type="range" id="a_slider" min="-0.5" max="2.5" step="0.00001" value="-0.1" oninput="redraw()"></label>
 
-            <label class="labels">b<input type="range" id="b_slider" min="-0.5" max="1.2" step="0.0001" value = "1.0" oninput="redraw()"></label>
+            <label class="labels">b<input type="range" id="b_slider" min="0.8" max="1.2" step="0.00001" value = "1.0" oninput="redraw()"></label>
         </div>
         <div class="charts">
             <div class="n_plots"></div>
