--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Henon Map</title>
+        <title>Henon Map Online</title>
         <script src="d3/d3.js"></script>
         <link rel="stylesheet" type="text/css" href="main.css">
         <script async defer src="https://buttons.github.io/buttons.js"></script>
