del sliders and old class
add new container class

--- a/index.html
+++ b/index.html
@@ -13,20 +13,9 @@
             <a class="github-button" href="https://github.com/tandav/Henon-Map" data-style="mega" aria-label="Follow @tandav on GitHub">Github</a>
         </div>
 
-        <div class='controls'>
-<!--             <label class="labels">a<input type="range" id="a_slider" min="-0.5" max="2.5" step="0.00001" value="-0.1" oninput="redraw()"></label>
-
-            <label class="labels">b<input type="range" id="b_slider" min="0.8" max="1.2" step="0.00001" value = "1.0" oninput="redraw()"></label> -->
-            <label for="a_slider">a</label>
-            <input type="range" id="a_slider" oninput="redraw()">
-            <output for="a_slider" id="a_out"></output>
-
-            <label for="b_slider">b</label>
-            <input type="range" id="b_slider" oninput="redraw()">
-            <output for="b_slider" id="b_out"></output>
-        </div>
         <div class="charts">
-            <div class="n_plots"></div>
+            <div class="ab_xy_plots"></div>
+            <!-- <div class="n_plots"></div> -->
         </div>
         <script src="script.js"></script>
     </body>
