--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
         <div class="charts">
             <div class="ab_xy_plots"></div>
-            <!-- <div class="n_plots"></div> -->
+            <div class="n_plots"></div>
         </div>
         <script src="script.js"></script>
     </body>
