add minified d3js

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Henon Map</title>
-        <script src="d3/d3.js"></script>
+        <script src="d3/d3.min.js"></script>
         <link rel="stylesheet" type="text/css" href="main.css">
         <script async defer src="https://buttons.github.io/buttons.js"></script>
     </head>
