--- a/henon-canvas.html
+++ b/henon-canvas.html
@@ -24,15 +24,29 @@ const ymin = -6.2;
 const ymax = ymin + xy_radius;
 
 
-var canvas = d3.select("canvas"),
+let canvas = d3.select("canvas"),
     context = canvas.node().getContext("2d"),
     width = canvas.property("width"),
     height = canvas.property("height"),
-    radius = 1.;
+    radius = 1.2;
 
 // var points = d3.range(2000).map(phyllotaxis(10));
 // var points = henon_map(0.285, 0.999, x0, y0, n);
-let hmap = new Array(n).fill([0, 0]); // [[x0, y0], [x1, y1], ... [xn, yn]]
+// let hmap = new Array(n).fill([0, 0]); // [[x0, y0], [x1, y1], ... [xn, yn]]
+let henon_math = new Array(n).fill([0, 0]); // [[x0, y0], [x1, y1], ... [xn, yn]] // math numbers, not pixels
+let henon_draw = new Array(n).fill([0, 0]); // [[x0, y0], [x1, y1], ... [xn, yn]] // pixels positions
+
+function henon_map(a, b, x0, y0, n) {
+    henon_math[0] = [x0, y0];
+    for (let i = 1; i < n; i++) {
+      henon_math[i] = [1 - a * Math.pow(henon_math[i - 1][0], 2) + henon_math[i - 1][1], b * henon_math[i - 1][0]]
+
+      // prevent infinity, TODO: try del
+      if (Math.abs(henon_math[i][0]) > 1e6 || Math.abs(henon_math[i][1]) > 1e6) { 
+          henon_math[i] = [0, 0]; 
+      }
+    }
+}
 
 // scales
 let a_scale = d3.scaleLinear()
@@ -54,88 +68,47 @@ let xy_plot_yScale = d3.scaleLinear()
     .range([ width, 0 ]);
 
 canvas.call(d3.zoom()
-    .scaleExtent([1 / 32, 1000])
+    .scaleExtent([1 / 16, 10])
     .on("zoom", zoomed));
 
-// drawPoints();
+let global_transform = d3.zoomIdentity;
+henon_map((a_min + a_max) / 2, -1.01, x0, y0, n); // change henon_math with a,b coefficiens from mouse
+// henon_math
+// draw_after_pan_zoom(global_transform); // this needs for first time?
+draw_after_mousemove();
 
-drawPoints(d3.zoomIdentity);
+d3.select('svg')
+  .on("mousemove", mouse_mooved);
 
-// function zoomed() {
-//   context.clearRect(0, 0, width, height);
-//   drawPoints(d3.event.transform);
-// }
+function draw_after_mousemove() {
+  context.beginPath();
+  henon_draw = henon_math.map(point => [xy_plot_xScale(point[0]), xy_plot_yScale(point[1])]); // math to pixels
+  draw_after_pan_zoom(global_transform);
+  context.fill();
+}
+
+function mouse_mooved() {
+  let mouse = d3.mouse(this);
+  henon_map(a_scale.invert(mouse[0]), b_scale.invert(mouse[1]), x0, y0, n); // change henon_math with a,b coefficiens from mouse
+  context.clearRect(0, 0, width, height); // try del this line for fun!
+  draw_after_mousemove();
+}
+
+function draw_after_pan_zoom(transform) {
+  context.beginPath();
+  henon_draw.map(transform.apply, transform).forEach(drawPoint);
+  context.fill();
+}
 
 function zoomed() {
-  // context.save();
   context.clearRect(0, 0, width, height);
-  // context.translate(d3.event.transform.x, d3.event.transform.y);
-  // context.scale(d3.event.transform.k, d3.event.transform.k);
-  // drawPoints();
-  drawPoints(d3.event.transform);
-  // context.restore();
-}
-
-// function drawPoints() {
-//   context.beginPath();
-//   hmap.forEach(drawPoint);
-//   context.fill();
-// }
-
-function drawPoints(transform) {
-  context.beginPath();
-  // hmap.map(rescale);
-  hmap.map(transform.apply, transform).forEach(drawPoint);
-  context.fill();
-}
-
-
-function drawPoints2() {
-  context.beginPath();
-  // hmap.map(rescale).forEach(drawPoint);
-  hmap.map(point => [xy_plot_xScale(point[0]), xy_plot_yScale(point[1])]).forEach(drawPoint);
-  hmap.forEach(drawPoint);
-  context.fill();
-}
-
-function rescale(point) {
-  return [xy_plot_xScale(point[0]), xy_plot_yScale(point[1])];
+  draw_after_pan_zoom(d3.event.transform);
+  global_transform = d3.event.transform; // maybe pass this as argument somehow?
 }
 
 function drawPoint(point) {
   context.moveTo(point[0] + radius, point[1]);
   context.arc(point[0], point[1], radius, 0, 2 * Math.PI);
-}
-
-function henon_map(a, b, x0, y0, n) {
-    hmap[0] = [x0, y0];
-    for (let i = 1; i < n; i++) {
-      hmap[i] = [1 - a * Math.pow(hmap[i - 1][0], 2) + hmap[i - 1][1], b * hmap[i - 1][0]]
-
-      // prevent infinity, TODO: try del
-      if (Math.abs(hmap[i][0]) > 1e6 || Math.abs(hmap[i][1]) > 1e6) { 
-          hmap[i] = [0, 0]; 
-      }
-    }
-    // points = hmap;
-    // return hmap;
-}
-
-d3.select('svg')
-  .on("mousemove", mouse_mooved);
-
-function mouse_mooved() {
-  let mouse = d3.mouse(this);
-  // let mouse_unzoomed = d3.mouse(d3.select("svg").node());
-  // red_pointer.attr("cx", mouse[0]).attr("cy", mouse[1]);
-  // red_pointer.attr("cx", mouse_unzoomed[0]).attr("cy", mouse_unzoomed[1]);
-  // red_pointer.attr("cx", d3.event.pageX).attr("cy", d3.event.pageY);
-  henon_map(a_scale.invert(mouse[0]), b_scale.invert(mouse[1]), x0, y0, n); // right values, works well
-  // context.save();
-  context.clearRect(0, 0, width, height); // try del this line for fun!
-  drawPoints2();
-  // context.restore();
-  // redraw();
 }
 
 
